[tool.poetry]
name = "narsad-fmri-mvpa"
version = "0.1.0"
description = "Multivariate pattern analysis for NARSAD fMRI study - Fear extinction and reinstatement"
authors = ["XiaoqianXiao <xiaoqianxiao@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.26.4,<2.0"
pandas = ">=2.3.3,<3.0"
scipy = ">=1.16.3,<2.0"
scikit-learn = ">=1.8.0,<2.0"
nibabel = "^5.1.0"
nilearn = "^0.10.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"
statsmodels = "^0.14.0"
joblib = "^1.3.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

